# display-hagl

./: .cproject  .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/fs_tools/: fsBuffer.c  fsLog.c  fsTools.c
components/fs_tools/include/: fsTools.h
components/gl9340/: CMakeLists.txt  Kconfig.projbuild
components/gl9340/include/: bitmap.h  clip.h  colors.h  fontx.h  gl.h  hsl.h  rect.h  rgb888.h
components/gl9340/include/fonts/: font6x9.h
components/gl9340/include/hal/: hagl_hal.h  hagl_hal_double.h  hagl_hal_single.h  hagl_hal_triple.h  mipi_display.h
components/gl9340/src/: bitmap.c  clip.c  colors.c  fontx.c  gl.c  hsl.c  jpeg_decomp.c  rect.c  rgb565.c  rgb888.c
components/gl9340/src/hal/: hagl_hal_double.c  hagl_hal_single.c  hagl_hal_triple.c  mipi_display.c
components/hagl/: CMakeLists.txt
components/hagl/include/: colors.h  gl.h  hagl.h  jpeg_decomp.h  rect.h  tjpgd.h
components/hagl/src/: clip.c  gl.c  hagl.c  rect.c  rgb565.c  tjpgd.c
components/hagl_esp_mipi/: Kconfig.projbuild
components/hagl_esp_mipi/include/: hagl_hal_single.h  mipi_display.h
components/hagl_esp_mipi/src/: hagl_hal_double.c  hagl_hal_single.c  hagl_hal_triple.c  mipi_display.c
main/: CMakeLists.txt  chancha.h  font_agency_50.h  iconos.h  main_test.c  main_test2.c  main_test3.c  main_test4.c  pig_resources.h
temporal/: font_squid_30.h
